Changing friendly error message - Login incorrect

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 error.001=Ejemplo de mensaje de error
-error.LOGIN_INCORRECT = Error: El correo electrónico o contraseña ingresada son incorrectos
+error.LOGIN_INCORRECT = Error: El nombre de usuario / correo electrónico o contraseña ingresados son incorrectos
