--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,2 +1,2 @@
 error.000=Example error message
-error.LOGIN_INCORRECT = Error: The email or password entered is incorrect
+error.LOGIN_INCORRECT = Error: The username / email or password entered is incorrect
