adding error messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,4 @@
 error.001=Ejemplo de mensaje de error
+error.ORDER_NOT_FOUND=No se pudo encontrar la orden
+error.ORDER_DOES_NOT_HAVE_ELEMENTS=La orden no posee productos
+error.ORDER_IS_NOT_READY=La orden no se encuentra lista
