--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,4 @@
 error.000=Example error message
+error.ORDER_NOT_FOUND=The order couldn't be found
+error.ORDER_DOES_NOT_HAVE_ELEMENTS=The order has no products
+error.ORDER_IS_NOT_READY=The order isn't ready
