--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 error.001=Ejemplo de mensaje de error
+error.NOT_EXIST_ORDER_PRODUCT = El producto seleccionado no existe.
+error.NOT_STATE = El estado del producto no está en pendiente o comprobado.
