--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,3 @@
 error.000=Example error message
+error.NOT_EXIST_ORDER_PRODUCT = The product selected doesn't exist.
+error.NOT_STATE = The state of the product isn't pending or checked.
