--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,2 @@
-error.000=Example error message
+error.001=Ejemplo de mensaje de error
+error.NOT_FOUND_STORE= We did not found the store with that ID
