--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,5 @@
+error.000=Example error message  
+error.STORE_NOT_FOUNDED=Store does not exist
 error.NOT_FOUND_STORE= We did not found the store with that ID
 error.LOGIN_INCORRECT = Error: The username / email or password entered is incorrect
 error.NOT_EXIST_ORDER_PRODUCT = The product selected doesn't exist.
