Adding Store's login and signup interfaces

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-error.000=Example error message  
+error.000=Example error message
 error.STORE_NOT_FOUNDED=Store does not exist
 error.NOT_FOUND_STORE= We did not found the store with that ID
 error.LOGIN_INCORRECT = Error: The username / email or password entered is incorrect
@@ -7,4 +7,4 @@ error.NOT_STATE = The state of the product isn't pending or checked.
 error.ORDER_NOT_FOUND=The order couldn't be found
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=The order has no products
 error.ORDER_IS_NOT_READY=The order isn't ready
-
+error.WRONG_EMAIL_OR_PHONE=The email and / or phone entered are incorrect
