Adding key strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,6 @@ storeorderdetailpage.btn_add=Agregar producto
 storeorderdetailwidget.unit_price=unidad
 storeorderdetailwidget.btn_check=Entregar
 storeorderdetailwidget.btn_delete=Eliminar
+
+storeOrderPage.mis_ordenes_title=Mis ordenes
+storeOrderPreparedsWidget.btn_deliver_title=Entregar
