--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,3 +35,5 @@ storeorderdetailpage.btn_add=Add product
 storeorderdetailwidget.unit_price=unit
 storeorderdetailwidget.btn_check=Submit
 storeorderdetailwidget.btn_delete=Delete
+
+storeOrderPage.mis_ordenes_title=My orders
