Adding new constructor to widget

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 error.STORE_NOT_FOUNDED=La tienda no existe
-error.NOT_FOUND_STORE=No encontramos la tienda con ese ID
-error.LOGIN_INCORRECT=Error: El nombre de usuario / correo electronico o contrasenia ingresados son incorrectos
-error.NOT_EXIST_ORDER_PRODUCT=El producto seleccionado no existe.
-error.NOT_STATE=El estado del producto no esta en pendiente o comprobado.
+error.NOT_FOUND_STORE= No encontramos la tienda con ese ID
+error.LOGIN_INCORRECT = Error: El nombre de usuario / correo electronico o contrasenia ingresados son incorrectos
+error.NOT_EXIST_ORDER_PRODUCT = El producto seleccionado no existe.
+error.NOT_STATE = El estado del producto no esta en pendiente o comprobado.
 error.ORDER_NOT_FOUND=No se pudo encontrar la orden
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=La orden no posee productos
 error.ORDER_IS_NOT_READY=La orden no se encuentra lista
@@ -36,3 +36,8 @@ storeorderdetailwidget.btn_delete=Eliminar
 
 storeOrderPage.mis_ordenes_title=Mis ordenes
 storeOrderPreparedsWidget.btn_deliver_title=Entregar
+storeorderpreparedwidget.btn_deliver_title=Entregar
+storeorderpage.my_orders_title=Mis ordenes
+storeorderpage.in_progress_title=En preparacion
+storeorderpage.prepared_title=Preparados
+storeorderpage.delivered_title=Entregados
