--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -37,3 +37,8 @@ storeorderdetailwidget.btn_check=Submit
 storeorderdetailwidget.btn_delete=Delete
 
 storeOrderPage.mis_ordenes_title=My orders
+storeorderpreparedwidget.btn_deliver_title=Deliver
+storeorderpage.my_orders_title=My orders
+storeorderpage.in_progress_title=In progress
+storeorderpage.prepared_title=Prepared
+storeorderpage.delivered_title=Delivered
