--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,3 +8,7 @@ error.ORDER_NOT_FOUND=The order couldn't be found
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=The order has no products
 error.ORDER_IS_NOT_READY=The order isn't ready
 error.WRONG_EMAIL_OR_PHONE=The email and / or phone entered are incorrect
+
+addproductpage.notsearchs = You dont have any search yet
+dialogaddproductpage.send = Send
+dialogaddproductpage.cancel = Cancel
