--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,7 @@ error.ORDER_NOT_FOUND=No se pudo encontrar la orden
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=La orden no posee productos
 error.ORDER_IS_NOT_READY=La orden no se encuentra lista
 error.WRONG_EMAIL_OR_PHONE=El correo electronico y/o telefono ingresado son incorrectos
+
+addproductpage.notsearchs = Aun no se ha realizado ninguna busqueda
+dialogaddproductpage.send = Enviar
+dialogaddproductpage.cancel = Cancelar
