--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,10 +1,23 @@
 error.000=Example error message
 error.STORE_NOT_FOUNDED=Store does not exist
-error.NOT_FOUND_STORE= We did not found the store with that ID
-error.LOGIN_INCORRECT = Error: The username / email or password entered is incorrect
-error.NOT_EXIST_ORDER_PRODUCT = The product selected doesn't exist.
-error.NOT_STATE = The state of the product isn't pending or checked.
+error.NOT_FOUND_STORE=We did not found the store with that ID
+error.LOGIN_INCORRECT=Error: The username / email or password entered is incorrect
+error.NOT_EXIST_ORDER_PRODUCT=The product selected doesn't exist.
+error.NOT_STATE=The state of the product isn't pending or checked.
 error.ORDER_NOT_FOUND=The order couldn't be found
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=The order has no products
 error.ORDER_IS_NOT_READY=The order isn't ready
 error.WRONG_EMAIL_OR_PHONE=The email and / or phone entered are incorrect
+storeloginpage.email_title=E-mail
+storeloginpage.password_title=Password
+storeloginpage.singup_title=Singup
+storeloginpage.login_title=Login
+storeloginpage.message_title=The session was successfully started
+storesignuppage.name_title=Name
+storesignuppage.owner_title=Owner
+storesignuppage.phone_title=Phone
+storesignuppage.password_title=Password
+storesignuppage.email_title=E-mail
+storesignuppage.address_title=Address
+
+
