--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,20 @@
 error.STORE_NOT_FOUNDED=La tienda no existe
-error.NOT_FOUND_STORE= No encontramos la tienda con ese ID
-error.LOGIN_INCORRECT = Error: El nombre de usuario / correo electronico o contrasenia ingresados son incorrectos
-error.NOT_EXIST_ORDER_PRODUCT = El producto seleccionado no existe.
-error.NOT_STATE = El estado del producto no esta en pendiente o comprobado.
+error.NOT_FOUND_STORE=No encontramos la tienda con ese ID
+error.LOGIN_INCORRECT=Error: El nombre de usuario / correo electronico o contrasenia ingresados son incorrectos
+error.NOT_EXIST_ORDER_PRODUCT=El producto seleccionado no existe.
+error.NOT_STATE=El estado del producto no esta en pendiente o comprobado.
 error.ORDER_NOT_FOUND=No se pudo encontrar la orden
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=La orden no posee productos
 error.ORDER_IS_NOT_READY=La orden no se encuentra lista
 error.WRONG_EMAIL_OR_PHONE=El correo electronico y/o telefono ingresado son incorrectos
+storeloginpage.email_title=Correo
+storeloginpage.password_title=Contrasenia
+storeloginpage.singup_title=Registrarse
+storeloginpage.login_title=Inicio de sesion
+storeloginpage.message_title=Se ha iniciado sesion correctamente
+storesignuppage.name_title=Nombre
+storesignuppage.owner_title=Propietario
+storesignuppage.phone_title=Telefono
+storesignuppage.password_title=Contrasenia
+storesignuppage.email_title=Correo
+storesignuppage.address_title=Direccion
