--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,9 @@ error.ORDER_NOT_FOUND=No se pudo encontrar la orden
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=La orden no posee productos
 error.ORDER_IS_NOT_READY=La orden no se encuentra lista
 error.WRONG_EMAIL_OR_PHONE=El correo electronico y/o telefono ingresado son incorrectos
+error.PRODUCT_CAN_NOT_BE_ADDED = El producto no pudo ser agregado
+error.NOT_ASSOCIATED_STORE = No tiene una tienda asociada
+error.PRODUCT_EXCIT_TOTALVALUE =El total del product excede el 10% del total de la Orden
 storeloginpage.email_title=Correo
 storeloginpage.password_title=Contrasenia
 storeloginpage.singup_title=Registrarse
