--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,6 +8,9 @@ error.ORDER_NOT_FOUND=The order couldn't be found
 error.ORDER_DOES_NOT_HAVE_ELEMENTS=The order has no products
 error.ORDER_IS_NOT_READY=The order isn't ready
 error.WRONG_EMAIL_OR_PHONE=The email and / or phone entered are incorrect
+error.PRODUCT_CAN_NOT_BE_ADDED = Product can't be added
+error.NOT_ASSOCIATED_STORE = Have not an associated store
+error.PRODUCT_EXCIT_TOTALVALUE =Total of the product exceed 10% of total from order
 storeloginpage.email_title=E-mail
 storeloginpage.password_title=Password
 storeloginpage.singup_title=Singup
